fix(client) search bar style on mobile

--- a/front_end/src/styles/PostFilterBar.module.css
+++ b/front_end/src/styles/PostFilterBar.module.css
@@ -62,6 +62,10 @@
     align-items: flex-start;
   }
 
+  .search_bar input {
+    width: 100%;
+  }
+
   .select_menu {
     padding: 0.25 0.5rem;
   }
